<resources>
    <string name="app_name">Barid Al Maghrib</string>
    <string name="login_title">Identification</string>
    <string name="login_subtitle">Saisissez votre numéro de téléphone</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="forgotten_password_btn">Mot de passe oublié ?</string>
    <string name="login_btn">Se connecter</string>
    <string name="identification_description">vous n’avez pas de compte?</string>
    <string name="sigin_title">Inscription</string>
    <string name="signin_subtitle">connectez-vous pour continuer</string>
    <string name="lastname_hint">Nom</string>
    <string name="firstname_hint">Prénom</string>
    <string name="social_hint">Raison sociale</string>
    <string name="number_hint">Numéro de téléphone</string>
    <string name="comment_hint">Complément</string>
    <string name="services_title">Services</string>
    <string name="categories_title">Catégories</string>
    <string name="portraits_title">Portraits</string>
    <string name="cart_title">Panier</string>
    <string name="add_btn">Ajouter au panier</string>
    <string name="login_dialog_title">Finaliser votre commande</string>
    <string name="login_dialog_subtitle">Vous devez vous identifier\npour continuer</string>
    <string name="dialog_login_btn">J’ai déjà un compte</string>
    <string name="cancel_btn">Annuler</string>
    <string name="delivery_mode_title">Mode de livraison</string>
    <string name="update_btn">Modifier</string>
    <string name="standard_delivery_title">Livraison standard</string>
    <string name="adress_title">Adresse</string>
    <string name="add_new_Address_btn">Ajouter une nouvelle adresse</string>
    <string name="next_btn">Continuer</string>
    <string name="save_btn">Enregistrer</string>
    <string name="add_new_address_title">Ajouter une nouvelle adresse</string>
    <string name="delivery_address_hint">Adresse de livraison</string>
    <string name="street_number_hint">Numéro de rue</string>
    <string name="city_hint">Ville</string>
    <string name="postal_code_hint">Code postal</string>
    <string name="phonenumber_hint">Numéro de téléphone</string>
    <string name="agency_delivery_title">Livraison en agence</string>
    <string name="search_agency_hint">Chercher ville, quartier et code postal …</string>
    <string name="select_agency_btn">Sélectionner cette agence</string>
    <string name="payment_title">Paiement</string>
    <string name="card_info_title">Données de votre carte bancaire</string>
    <string name="card_number_hint">Numéro de carte</string>
    <string name="expiration_date_hint">Date d\'expiration</string>
    <string name="card_owner_name_hint">Nom de titulaire de la carte</string>
    <string name="cvv2_hint">CVV2</string>
    <string name="discount_number_hint">12345678</string>
    <string name="discount_title">Bon de réduction</string>
    <string name="pay_btn">Payer</string>
    <string name="apply_btn">Appliquer</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="command_number">Numéro de commande</string>
    <string name="command_date">Date de commande</string>
    <string name="command_address">Adresse</string>
    <string name="command_payment">Numéro de commande</string>
    <string name="confirmation_dialog_title">Commande confirmée</string>
    <string name="confiramtion_dialog_subtitle">Merci de votre achat. vous recevrez\nprochainement un e-mail avec tous les détails.</string>
    <string name="confirmation_dialog_btn">Suivi de la commande</string>
    <string name="tracking_title">Suivi de la commande</string>
    <string name="share_command_btn">Partager la commande</string>
    <string name="update_dialog_title">Mise à jour</string>
    <string name="update_version_btn">Mettre à jour</string>
    <string name="not_now_btn">Pas maintenant</string>
    <string name="stamps_title">Timbres</string>
    <string name="help_title">Contact</string>
    <string name="name_hint">Nom et prénom</string>
    <string name="reason_hint">Objet</string>
    <string name="message_hint">Message</string>
    <string name="ok_btn">OK</string>
    <string name="no_internet_msg">Aucune connexion internet détectée. Veuillez vérifier vos paramètres de connexion puis réessayer.</string>
    <string name="generic_error">Une erreur est survenue!</string>
    <string name="price_unity">MAD</string>
    <string name="logout_btn">Se Déconnecter</string>
    <string name="update_infos_title">Mes informations personnelles</string>
    <string name="birthdate_hint">Date de naissance</string>
    <string name="address_hint">Adresse postale</string>
    <string name="my_address_hint">Mon adresse</string>
    <string name="confirm_btn">Confirmer</string>
    <string name="my_history_title">Mon historique</string>
    <string name="cgu_text"><![CDATA[<font color="#000000">J’accepte </font><font color="#00428D"><u>les conditions générales</u></font>]]></string>
    <string name="cgu_sell_text"><![CDATA[<font color="#000000">J’accepte </font><font color="#00428D"><u>les conditions générales de vente</u></font>]]></string>
    <string name="rules_text"><![CDATA[<font color="#000000">J’accepte les conditions de la loi </font><font color="#00428D"><u>09–08</u></font>]]></string>
    <string name="total_price">Prix total :</string>
    <string name="fee">Frais d\'envoi :</string>
    <string name="price">Prix produits :</string>
    <string name="cgu_title">Conditions générales</string>
    <string name="cgu_description_title">Rappel important :</string>
    <string name="cgu_description_body">Toutes les opérations portant sur l’exposition, la diffusion et la mise en vente des photographies, et en général de toutes les reproductions y compris en dessin ou photographie, des traits de Sa Majesté le Roi, doivent se conformer aux dispositions du Dahir n° 1–56–204 du 16 joumada I 1376 (19 décembre 1956) réglementant la reproduction des traits de Sa Majesté le Roi et de leurs Altesses Royales, Ses Enfants (B.O n° 2307 du 11 janvier 1957) et à la circulaire de Monsieur le Chef du Gouvernement n° 15/2019 du 23 Moharrem 1441 (23 septembre 2019) relative au portrait officiel de de Sa Majesté le Roi Mohammed VI, que Dieu le Glorifie.</string>
    <string name="send_btn">Envoyer</string>
    <string name="bank_card">Carte bancaire</string>
    <string name="money_cash">Espèce</string>
    <string name="delivery">( à la livraison )</string>
    <string name="add_comment_title">Commentaire</string>
    <string name="hint_comment">Ecrire votre commentaire</string>
    <string name="next1_btn">Suivant</string>
    <string name="sms_confirmation_dialog_title">SMS confirmation</string>
    <string name="sms_confirmation_dialog_subtitle">Saisissez le code reçu par SMS</string>
    <string name="standard_shipping_title">Livraison standard</string>
    <string name="agency_shipping_title">Livraison en agence</string>
    <string name="quuantity_title">Quantité :</string>
    <string name="shipping_fee">Frais d\'envoi</string>
    <string name="shipping_method">Mode de livraison</string>
    <string name="discover_btn">Découvrir</string>
    <string name="purchaseBtn">Commander</string>
    <string name="register_dialog_btn">Je m’inscris</string>
    <string name="welcome">Bienvenue</string>
    <string name="resend_otp_btn">Renvoyer le code</string>
    <string name="discover_description">Fort de votre confiance, Barid Al-Maghrib, entreprise citoyenne innove pour vous satisfaire au quotidien.\n\n<b>Confiance</b>\nFort de votre confiance, nous accomplissons notre mission avec éthique et professionnalisme.\n\n<b>Citoyenneté</b>\nNous sommes une entreprise citoyenne assurant un service public de qualité et de proximité, dans le cadre de nos engagements RSE.\n\n<b>Innovation</b>\nNous anticipons les attentes de nos clients et nous nous adaptons en permanence au changement.\n\n<b>Satisfaction clients</b>\nNous veillons à maintenir une relation privilégiée et pérenne avec nos clients en plaçant leurs exigences au centre de nos préoccupations.</string>
    <string name="company_choice_title">Entreprise</string>
    <string name="particular_choice_title">particuliers / institutions publiques</string>
    <string name="cni_hint">CNI</string>
    <string name="additional_address_hint">Complément d’adresse</string>
    <string name="address_name_hint">Nom de l’adresse</string>
    <string name="register_btn_title">S\'inscrire</string>
    <string name="ice_hint">ICE</string>
    <string name="id_fiscal_hint">Identifiant fiscal</string>
    <string name="price_unit">Dirhams TTC</string>
    <string name="vgu_description_title_ar">تذكير هام :</string>
    <string name="cgu_description_ar">تخضع كل العمليات المتمثلة في اعداد وعرض وإذاعة وتقديم للبيع الصور الفوتوغرافية التي يتمثل فيها جلالة الملك وبصفة عامة جميع ما يستخرج منها، لمقتضيات الظهير الشريف رقم 204-56-1 بتاريخ 16 جمادى الأولى 1376 ( 19 ديسمبر 1956 (يضبط بمقتضاه استخراج صور صاحب الجلالة وصور أصحاب السمو الملكي أنجاله (ج. ر. بتاريخ 11 يناير 1957) ولمنشور السيد رئيس الحكومة رقم 15/2019 الصادر بتاريخ 23 محرم 1441 (23 شتنبر 2019) المتعلق بالصورة الرسمية لصاحب الجلالة الملك محمد السادس أيده الله ونصره.</string>
    <string name="invalid_email_error">Format email invalide</string>
    <string name="invalid_format_error">Format invalide</string>
    <string name="personal_info_btn">Mes informations personnelles</string>
    <string name="history_btn">Mon historique</string>
    <string name="tracking_btn">Suivi de commande</string>
    <string name="contact_btn">Contact</string>
    <string name="code_hint">Code commande</string>
    <string name="call_service_btn">Appeler le service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standard_shipping_method_description">Une fois le colis préparé par nos soins, il vous sera livré à l’adresse de votre choix</string>
    <string name="agency_shipping_method_description">Vous avez la possibilité de retirer directement votre colis dans l’une de nos agences ou points relais de votre choix</string>
    <string name="my_addresses_btn">Mes adresses</string>
    <string name="update_address_title">Modifer cette adresse</string>

</resources>