<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="18dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/backBtn"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/add_new_address_title"
            android:textColor="@color/darkGrey"
            android:textSize="22sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/social_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/delivery_address_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/street_number_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/city_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/postal_code_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/phonenumber_hint"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintGrey"
            android:textSize="14sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_medium"
        android:stateListAnimator="@null"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="20dp" />
</RelativeLayout>
