<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="18dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cgu_title"
                android:textColor="@color/darkGrey"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/vgu_description_title_ar"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/cgu_description_ar"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/cgu_description_title"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/cgu_description_body"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</layout>