<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/confirmation_dialog_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/confiramtion_dialog_subtitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:stateListAnimator="@null"
            android:text="@string/confirmation_dialog_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:cornerRadius="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
