<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="18dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="45dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/poste" />

            <TextView
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/logo"
                android:layout_alignBottom="@id/logo"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/update_btn"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/backBtn"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/update_infos_title"
                android:textColor="@color/darkGrey"
                android:textSize="19sp" />

            <LinearLayout
                android:id="@+id/inputsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/hintGrey"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/lastname_hint"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGrey"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/hintGrey"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/firstname_hint"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGrey"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/hintGrey"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/email_hint"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGrey"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/hintGrey"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/phonenumber_hint"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGrey"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputsLayout"
                android:layout_alignParentBottom="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextBtn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/button_background_selector"
                    android:enabled="false"
                    android:fontFamily="@font/montserrat_semibold"
                    android:stateListAnimator="@null"
                    android:text="@string/confirm_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:cornerRadius="25dp" />
            </RelativeLayout>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loader"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@mipmap/loader"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</layout>
