<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sms_confirmation_dialog_title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sms_confirmation_dialog_subtitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:background="@null"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserrat_semibold"
            android:inputType="phone"
            android:layoutDirection="ltr"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:pinAnimationType="fromBottom"
            app:pinBackgroundDrawable="@drawable/sms_text_background"
            app:pinBackgroundIsSquare="true"
            app:pinCharacterSpacing="15dp"
            app:pinTextBottomPadding="20dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserrat_medium"
            android:stateListAnimator="@null"
            android:text="@string/next1_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:cornerRadius="10dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:stateListAnimator="@null"
            android:text="Renvoyer le code"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="11sp"
            app:strokeColor="@color/blue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
